commit-5.1: index.html-maj

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="John DOE" />
     <meta name="robots" content="index, follow" />
     <title>John DOE | Développeur Web</title>
-    <link rel="icon" type="image/x-icon" href="/public/assets/images/anonym.png" />
+    <link rel="icon" type="image/x-icon" href="anonym.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
